--- a/layout/macros.j2
+++ b/layout/macros.j2
@@ -27,15 +27,15 @@
 				site.content.node_from_relative_path(item.url)) -%} 
 		{% endif %}
 		<li {% if active %}class="active"{% endif %}> 
-			<a href="{{ content_url(item.url) }}">{{ item.title }}</a>
+			<a href="{{ content_url(item.url) }}">{% if item.glyphicon %}<span class="glyphicon glyphicon-{{ item.glyphicon }}"></span> {% endif %}{{ item.title }}</a>
 		</li>
 	{% elif item.type == 'dropdown' -%} 
 	<li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ item.title }}<b class="caret"></b></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% if item.glyphicon %}<span class="glyphicon glyphicon-{{ item.glyphicon }}"></span> {% endif %}{{ item.title }}<b class="caret"></b></a>
         <ul class="dropdown-menu">
 		{% for section in item.sections -%}
 			{% for item in section.items -%}
-				  <li><a href="{{ content_url(item.url) }}">{{ item.title }}</a></li>
+				  <li><a href="{{ content_url(item.url) }}">{% if item.glyphicon %}<span class="glyphicon glyphicon-{{ item.glyphicon }}"></span> {% endif %}{{ item.title }}</a></li>
 			{% endfor -%}
 			{% if not loop.last %}
 				<li class="divider"></li>
